# payshepard_cdk_test

./: .gitignore  README.md  app.py  cdk.json  deploy.sh  payshepard_stack.py  pyproject.toml  requirements.txt  simple_deploy.py  test_getsts.sh  validate_deployment.sh
s3_bucket_tables/: s3_buckettable_stack.py
